--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+        
+    permissions:
+          contents: read
+          id-token: write
+          security-events: write
 
     steps:
     - uses: actions/checkout@v4
