--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,16 +14,16 @@ on:
   pull_request:
     branches: [ "develop" ]
 
+permissions:
+      contents: read
+      id-token: write
+      security-events: write
+
 jobs:
   build:
 
     runs-on: ubuntu-latest
-        
-    permissions:
-          contents: read
-          id-token: write
-          security-events: write
-
+  
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 11
@@ -38,3 +38,5 @@ jobs:
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      with:
+              token: ${{ secrets.GITHUB_TOKEN }}
